<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dateInspector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/daySumDateInspector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:text="@string/daySumDate" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabNextDayInspector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/fabPreviousDayInspector"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        app:backgroundTint="@android:color/transparent"
        app:elevation="0dp"
        app:fabSize="mini"
        app:rippleColor="@android:color/transparent"
        app:srcCompat="@drawable/thin_arrow_right" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabPreviousDayInspector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="58dp"
        android:clickable="true"
        app:backgroundTint="@android:color/transparent"
        app:elevation="0dp"
        app:fabSize="mini"
        app:rippleColor="@android:color/transparent"
        app:srcCompat="@drawable/thin_arrow_left" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/inspectorDetailsContainer"
        android:layout_width="232dp"
        android:layout_height="293dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:fillViewport="true">

        <TableLayout
            android:id="@+id/inspectorDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TableLayout>
    </android.support.v4.widget.NestedScrollView>

    <TextView
        android:id="@+id/daySumLabelInspector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="107dp"
        android:text="@string/dayTotal" />

    <TextView
        android:id="@+id/daySumValueInspector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/daySumLabelInspector"
        android:layout_centerHorizontal="true"
        android:text="00,00" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/daySumLabelInspector"
        android:layout_marginEnd="104dp"
        android:text="@string/currency" />

</RelativeLayout>